# nanoGPT_xidian

./: .gitignore  README.md  inference.py  main.py  model.py  pyproject.toml  quantize.py  requirements.txt  train.py
contexts/: nanoGPT.md
plots/: MOE.md
rag_index/: chroma.sqlite3
rag_index_case_study/: chroma.sqlite3
reports/: quantization_report.md
scripts/: analyze_moe.py  build_sft_data.py  build_sft_data_en.py  plot_losses.py  print_model_arch.py  quant_report.py  rag_case_study.py
tests/: test_model.py  test_pretrain_samples.py  test_sanity.py  test_sft_samples.py
西电大作业/: rag_case_study.md  report.tex
