[project]
name = "nanogpt-xidian"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "datasets>=4.5.0",
    "tiktoken>=0.12.0",
    "torch>=2.10.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "torchinfo>=1.8.0",
    "transformers>=5.0.0",
]
